[gd_scene load_steps=10 format=3 uid="uid://dqq5pt2qycncx"]

[ext_resource type="Script" path="res://ditto.gd" id="1_1wl1w"]
[ext_resource type="Texture2D" uid="uid://cr4qxyl60m0tg" path="res://Assets/brackeys_platformer_assets/sprites/fruit.png" id="2_eojhs"]
[ext_resource type="Texture2D" uid="uid://b878gl7axf3s" path="res://Assets/enemy.png" id="3_8aanw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w40cs"]
atlas = ExtResource("3_8aanw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_weuu7"]
atlas = ExtResource("3_8aanw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8xtv"]
atlas = ExtResource("3_8aanw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ognc4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w40cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weuu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8xtv")
}],
"loop": true,
"name": &"Ditto",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ne2e"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_pcohm"]
radius = 89.0

[node name="Obstacle" type="Area2D"]
script = ExtResource("1_1wl1w")

[node name="Disguise" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_eojhs")
region_enabled = true
region_rect = Rect2(32, 32, 16, 16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ognc4")
animation = &"Ditto"
autoplay = "Ditto"
frame_progress = 0.725335

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5ne2e")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Playerdetectzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playerdetectzone"]
shape = SubResource("CircleShape2D_pcohm")

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Playerdetectzone" to="." method="_on_playerdetectzone_body_entered"]
